Fix broken normalization of some HID axes on OSX

The OUYA and Nvidia Shield controllers report axes with a logical
range of -1 to 0. The integer values returned by HID manager for these
axes range from 0 to 65535. Without treating these logical ranges
as unsigned, the normalization calculation yields incorrect results.

Post-normalization, these special axes are also opposite of how the
gamepad code expects them (1 to -1 instead of -1 to 1). This CL swaps
logical min and max for these axes to invert the result of normalization.

R=bajones@chromium.org

BUG=608170
TEST=HTML5 Gamepad API test with OUYA or Nvidia Shield controller

Review-Url: https://codereview.chromium.org/1939613003
Cr-Commit-Position: refs/heads/master@{#390866}

Former-commit-id: 7dac9dec172d28199da24e3084c6449284f12a90